<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.nicx.sonus1.sonus">

    <ScrollView

        android:layout_width="0dp"
        android:layout_height="495dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:scrollbarStyle="outsideOverlay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="8dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/auto_volume_control_label"
                style="?android:attr/listSeparatorTextViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:paddingLeft="8dp"
                android:text="Volume Control"
                android:textColor="@android:color/background_dark"
                tools:text="@string/vc_title" />

            <TextView
                android:id="@+id/switch_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/auto_volume_control_label"
                android:layout_marginTop="16dp"
                android:layout_weight="1"
                android:paddingLeft="10dp"
                android:text="Trigger"
                android:textSize="14sp"
                tools:text="@string/trigger" />

            <Switch
                android:id="@+id/enable_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/auto_volume_control_label"
                android:layout_marginTop="16dp"
                android:layout_weight="1"
                android:gravity="right" />

            <TextView
                android:id="@+id/current_volume_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/switch_label"
                android:layout_marginRight="16dp"
                android:layout_marginTop="16dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:text="Set Volume"
                android:textSize="14sp"
                tools:text="@string/set_vol" />

            <SeekBar
                android:id="@+id/volume_seek"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/enable_switch"
                android:layout_toEndOf="@+id/auto_volume_control_label"
                android:layout_toRightOf="@+id/auto_volume_control_label"
                android:layout_weight="2"
                android:paddingTop="5dp"
                android:progress="25" />

            <TextView
                android:id="@+id/set_mic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/current_volume_label"
                android:layout_marginRight="16dp"
                android:layout_marginTop="16dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:text="Set Mic"
                android:textSize="14sp"
                tools:text="@string/set_mic" />

            <SeekBar
                android:id="@+id/mic_seek"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/volume_seek"
                android:layout_alignParentRight="true"
                android:layout_alignStart="@+id/volume_seek"
                android:layout_alignTop="@+id/set_mic"
                android:layout_weight="2"
                android:paddingTop="5dp"
                android:progress="25" />

            <TextView
                android:id="@+id/preset_label"
                style="?android:attr/listSeparatorTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/set_mic"
                android:layout_marginTop="16dp"
                android:paddingLeft="8dp"
                android:text="Status"
                android:textColor="@android:color/background_dark"
                tools:text="@string/status_title" />


            <ProgressBar
                android:id="@+id/current_volume_progress"
                style="@android:style/Widget.Holo.ProgressBar.Horizontal"
                android:layout_width="20dp"
                android:layout_height="200dp"
                android:layout_below="@+id/preset_label"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="16dp"
                android:max="100"
                android:progress="50"
                android:progressDrawable="@drawable/progress_drawable" />

            <ProgressBar
                android:id="@+id/current_mic_progress"
                style="@android:style/Widget.Holo.ProgressBar.Horizontal"
                android:layout_width="20dp"
                android:layout_height="200dp"
                android:layout_above="@+id/volume_level"
                android:layout_marginEnd="14dp"
                android:layout_toStartOf="@+id/enable_switch"
                android:indeterminate="false"
                android:max="100"
                android:progress="25"
                android:progressDrawable="@drawable/progress_drawable" />

            <TextView
                android:id="@+id/volume_level"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/current_volume_progress"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="16dp"
                android:layout_weight="1"
                android:paddingLeft="5dp"
                android:text="Volume Level"
                android:textSize="14sp"
                tools:text="@string/vol_level" />

            <TextView
                android:id="@+id/mic_level"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginEnd="14dp"
                android:layout_marginRight="14dp"
                android:layout_weight="1"
                android:paddingLeft="10dp"
                android:text="Background Noise"
                android:textSize="14sp"
                tools:text="@string/bg_noise" />

        </RelativeLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>
